# XiLang

./: .clang-format  .clang-tidy  .clangd  .gitignore  .travis.yml  CMakeLists.txt  README.md  conanfile.txt  vcpkg.json
app/: CMakeLists.txt  main.cpp
app/compiler/: CMakeLists.txt  main.cpp  test.xi
app/editor/: CMakeLists.txt  lpf.h  lpf.qrc  lpf.ui  main.cpp  oper.cpp
app/repl/: CMakeLists.txt  main.cpp
cmake/: addsubdirs.cmake  catchtest.cmake
demo/: array.xi  assign.xi  buer.xi  factor.xi  func.xi  prime.xi  set.xi
lib/compiler/: CMakeLists.txt  ast.h  ast_format.h  basic_parsers.h  bool_expr_parser.h  if_expr.h  math_expr_parser.h  new_combinator.h  parser.h  parser_combinator.h  parsers.h  utils.h
lib/compiler/ast/: CMakeLists.txt  all.h  array_index.cpp  array_index.h  ast.h  ast_format.h  call.cpp  call.h  enum_format.h  error.cpp  error.h  if.cpp  if.h  type.h  type_assign.h  type_format.h  utils.h
lib/compiler/ast/expr/: array.cpp  array.h  array_index.cpp  array_index.h  assign.cpp  assign.h  basic.cpp  basic.h  call.cpp  call.h  expr.cpp  expr.h  iden.cpp  iden.h  if.cpp  if.h  lam.cpp  lam.h  op.cpp  op.h
lib/compiler/ast/stmt/: comment.cpp  comment.h  decl.cpp  decl.h  func.cpp  func.h  if.cpp  if.h  program.cpp  program.h  return.cpp  return.h  set.cpp  set.h  stmt.cpp  stmt.h  stmts.cpp  stmts.h  var.cpp  var.h  while.cpp  while.h
lib/compiler/functional/: CMakeLists.txt  fold.h  monad.h
lib/compiler/generator/: CMakeLists.txt  error.h  llvm.h  pcode.h  pcode_gen.h
lib/compiler/parser/: CMakeLists.txt  array.h  array_index.h  assign.h  basic_parsers.h  bool_expr.h  bool_expr_parser.h  call.h  comment_parser.h  decl.h  expr.cpp  expr.h  func.h  if_expr.h  lam_expr.h  math_expr.h  math_expr_parser.h  num.h  parser_combinator.h  program.cpp  program.h  set.h  set_get_member.h  utils.h  xi.h
lib/compiler/util/: expected.h
lib/compiler/utils/: CMakeLists.txt  expected.h  variant_cmp.h
tests/: CMakeLists.txt  expression_test.cpp  format_test.cpp  parser_combinator_test.cpp  parser_test.cpp  parsers_test.cpp  test_header.h
tests/ast/: ast_format_test.cpp  type_assign_test.cpp
tests/generator/: llvm_test.cpp
tests/include/: test_header.h
tests/parser/: array_index_test.cpp  array_test.cpp  assign_test.cpp  basic_parser_test.cpp  bool_expr_test.cpp  call_test.cpp  decl_test.cpp  expr_test.cpp  func_test.cpp  if_expr_test.cpp  if_stmt_test.cpp  lam_expr_test.cpp  math_expr_test.cpp  parser_combinator_test.cpp  parsers_test.cpp  program_test.cpp  set_get_member_test.cpp  set_test.cpp  var_test.cpp  while_test.cpp  xi_test.cpp
